Fix query saving and layout issues

--- a/app/src/app/pages/graph/graph.component.scss
+++ b/app/src/app/pages/graph/graph.component.scss
@@ -25,5 +25,5 @@ app-visualizer {
 }
 
 .d-flex {
-  height: 80vh;
+  height: calc(100% - 52px);
 }
